--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@heroicons/react": "^2.0.18",
     "@mhsdesign/jit-browser-tailwindcss": "^0.3.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^6.6.0",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tailwindcss/forms": "^0.5.6",
     "@tanstack/react-query": "^4.32.6",
@@ -40,16 +40,18 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
-    "next": "^13.4.19",
+    "http-proxy-middleware": "^3.0.5",
+    "next": "^13.5.11",
     "next-auth": "^4.23.0",
     "next-superjson-plugin": "^0.5.9",
     "openai": "^4.8.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^0.0.55",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
+    "tunnel": "^0.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -66,7 +68,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
-    "prisma": "^5.1.1",
+    "prisma": "^6.6.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
